[package]
name = "tap-proxy"
version = "0.1.0"
edition = "2024"
description = """tap-proxy is a lightweight TCP debugging proxy written in Rust.
It forwards TCP traffic (including HTTP and HTTPS) from a local
port to a specified upstream server and prints the request and
response data in real time in the terminal,making it convenient
for debugging API calls during development.

Your Application  ------>  tap-proxy  ------> Remote Server
                            ╱    ╲
              Dump:   Request  +  Response

Site: https://github.com/oh-rust/tap-proxy/
"""
authors =["hidu"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60",default-features = false, features = ["derive","help","std"] }
colored = "3.1.1"
#rustls-native-certs = "0.8.3"
tokio = { version = "1.50.0", features = ["net", "io-util", "macros", "rt-multi-thread", "time"] }
tokio-rustls = { version = "0.26.4",features = ["logging", "tls12"] }

[profile.release]
lto = true          # Link Time Optimization
codegen-units = 1   # 减少生成单元，提高优化空间
opt-level = "z"     # "z" 优化体积，"s" 优化大小，默认 "3" 优化速度
strip = true        # 自动剥离符号表 (无需手动执行 strip 命令)